# SWE20004_PROJECT

./: CMakeLists.txt  high_risk_covid_locations.txt  patient_details.txt  symptoms.txt  temp.txt
include/: functions.hpp  includes.hpp  option1.hpp  option2.hpp  option3.hpp  option4.hpp  option5.hpp  patient_record.hpp  utilities.hpp
src/: functions.cpp  main.cpp  option1.cpp  option2.cpp  option3.cpp  option4.cpp  option5.cpp  utilities.cpp
