cmake_minimum_required(VERSION 3.25)
project(Project_Code)

set(CMAKE_CXX_STANDARD 23)

add_executable(Project_Code src/main.cpp src/option1.cpp include/option1.hpp include/patient_record.hpp src/utilities.cpp include/utilities.hpp src/option2.cpp include/option2.hpp src/option3.cpp include/option3.hpp src/option4.cpp include/option4.hpp src/option5.cpp include/option5.hpp include/includes.hpp)
